Dyntopo smooth shading broken #70390

Closed
opened 2019-09-30 15:06:12 +02:00 by Julien Kaspar · 11 comments
Member

System Information
Operating system: Linux-4.15.0-64-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.40

Blender Version
Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-30 08:51, hash: 64c8e9a219

Short description of error
When enabling dyntopo and smooth shading the surface of the object is riddled with black artefacts and holes.

Selection_083.png

**System Information** Operating system: Linux-4.15.0-64-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.40 **Blender Version** Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-30 08:51, hash: `64c8e9a219` **Short description of error** When enabling dyntopo and smooth shading the surface of the object is riddled with black artefacts and holes. ![Selection_083.png](https://archive.blender.org/developer/F7781693/Selection_083.png)
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar

#70427 was marked as duplicate of this issue

#70427 was marked as duplicate of this issue

Added subscriber: @MarcinTwarowski

Added subscriber: @MarcinTwarowski

Same here.

2.81 (sub 12), branch: master, commit date: 2019-09-30 22:00, hash: 60a827a2a9
Windows-10-10.0.16299 64 Bits
GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.86

Same here. 2.81 (sub 12), branch: master, commit date: 2019-09-30 22:00, hash: `60a827a2a9` Windows-10-10.0.16299 64 Bits GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.86

Added subscribers: @PabloDobarro, @mano-wii

Added subscribers: @PabloDobarro, @mano-wii
Pablo Dobarro was assigned by Germano Cavalcante 2019-10-02 14:35:31 +02:00

I can confirm.
The problem did not exist in previous versions of Blender.
@PabloDobarro, any ideas which commit introduced this problem?

I can confirm. The problem did not exist in previous versions of Blender. @PabloDobarro, any ideas which commit introduced this problem?
Pablo Dobarro was unassigned by Brecht Van Lommel 2019-10-02 14:49:40 +02:00
Brecht Van Lommel self-assigned this 2019-10-02 14:49:40 +02:00
Member

Added subscribers: @ChuckOcheret, @lichtwerk

Added subscribers: @ChuckOcheret, @lichtwerk

This issue was referenced by de4ebcbe43

This issue was referenced by de4ebcbe4368e2e71dc14effaf2733a4a0138570

Added subscriber: @kiwpiwsiwtiw

Added subscriber: @kiwpiwsiwtiw

i have same problem but only on blender 2.81

i have same problem but only on blender 2.81

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70390
No description provided.