Fix T70390: dyntopo smooth shading broken after recent changes

Made the code fully thread safe now.